<resources>
    <string name="app_name">BWA Mov</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now_Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre-Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="memulai">Memulai</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang\nAtika SP</string>
    <string name="simpan_dan_lanjutkan">SImpan dan Lanjutkan</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="checkout">Checkout</string>
    <string name="batalkan">Batalkan</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_data_baru">SImpan Data Baru</string>
    <string name="my_wallet">My Wallet</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="storyboard">Storyboard</string>
    <string name="who_s_played">Who\'s Played</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="booked">Booked</string>
    <string name="empty">Empty</string>
    <string name="selected">Selected</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="tiket_telah_berhasil_dibeli_dan_selamat_menikmati_film">Tiket telah berhasil dibeli dan\nselamat menikmati film</string>
    <string name="home">Home</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="today_s">Today\'s</string>
    <string name="when">When</string>
    <string name="date_and_time">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="profile">Profile</string>
    <string name="change_language">Change Language</string>
    <string name="help">Help</string>
    <string name="top_up">Top Up</string>
    <string name="custom_amount">Custom Amount</string>
    <string name="quick_option">Quick Option</string>
    <string name="you_got_it">You Got It!</string>
    <string name="e_wallet_telah_berhasil_untuk_ndiperbaharui">E-wallet telah berhasil untuk\ndiperbaharui</string>
    <string name="top_up_sekarang">Top Up Sekarang</string>
</resources>